# address-service

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  schema.yml
addresses_service/: asgi.py  settings.py  urls.py  wsgi.py
addresses_service/apps/addresses/: apps.py  models.py  serializers.py  urls.py  views.py
addresses_service/apps/addresses/migrations/: 0001_initial.py
addresses_service/apps/base/: pagination.py  serializers.py
addresses_service/static/: openapi.yaml
config/: docker.env
docker/: Dockerfile  create-db.sql
tests/: conftest.py  factories.py
tests/functional/: test_addresses_api.py  test_migrations.py
tests/unit/: test_serializers.py
